--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+//noinspection GradleCompatible
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -17,6 +19,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    // added by me : for the news feed
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+            //res.srcDirs = ['src/main/res', 'src/main/res/drawable']
+        }
+    }
+    // fin added by me : for the news feed
 }
 
 dependencies {
@@ -64,4 +74,18 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     /* (Added by me ) Fin :  Library for Reporting Charts */
 
+    // Start of : Google Services FireBase => using it now for notifications push
+    //noinspection GradleCompatible
+    compile 'com.google.firebase:firebase-core:16.0.1'
+    compile 'com.google.firebase:firebase-messaging:17.1.0'
+    // End of : Google Services FireBase => using it now for notifications push
+
+    // added by me : for the news feed
+    compile 'com.mindorks:placeholderview:0.7.1'
+    // fin added by me : for the news feed
+
 }
+
+// Start of : Google Services FireBase => using it now for notifications push
+apply plugin: 'com.google.gms.google-services'
+// End of : Google Services FireBase => using it now for notifications push
